--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,13 +1,19 @@
+@import url(https://fonts.googleapis.com/css?family=Poppins:100,100,italics,200,200italics,300,300italics,400,400);
+
+*{
+  margin:0;
+  padding:0;
+  box-sizing: border-box;
+}
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: "Poppins", sans-serif, "Open Sans"
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html, body 
+{
+  scroll-behavior: smooth;
 }
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
